<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".FirstFragment">

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp">

        <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/identification_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:text="@string/identification"
                        android:textColor="@color/textColorTitle"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="16dp"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/we_send_you_term_code_to_identification"
                        android:textColor="@color/textColorTitle"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/identification_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textAlignment="textStart"
                        android:id="@+id/identification_tv"
                        android:textSize="18sp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/identification_user_id_til"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:hint="@string/user_id"
                        app:counterEnabled="true"
                        app:counterTextAppearance="@style/CounterText"
                        app:counterMaxLength="9"
                        app:errorEnabled="true"
                        app:errorTextAppearance="@style/ErrorText"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/identification_tv"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toEndOf="@+id/identification_userid_valid_iv"
                        android:layout_marginStart="16dp">
                    <!--app:boxCornerRadiusTopStart="16dp"-->

                    <com.madanes.app.views.CleanableTextInputEditText
                            android:id="@+id/identification_user_id_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLines="1"
                            android:textDirection="rtl"
                            android:textSize="18sp"
                            android:textColor="@color/textColor"
                            android:digits="0123456789"
                            android:imeOptions="actionNext"
                            android:nextFocusDown="@+id/identification_mfa_edt"
                            app:cleanable_icon="@drawable/ic_close_black_24dp"/>

                    <!--app:cleanable_icon = "@drawable/ic_close_black_24dp"-->

                </com.google.android.material.textfield.TextInputLayout>


                <ImageView
                        android:src="@drawable/ic_id_valid"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/content_description_icon"
                        android:id="@+id/identification_userid_valid_iv"
                        android:visibility="gone"
                        tools:visibility="visible" android:layout_marginStart="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/identification_user_id_til"
                        app:layout_constraintBottom_toBottomOf="@+id/identification_user_id_til"
                        app:layout_constraintEnd_toStartOf="@+id/identification_user_id_til"/>


                <TextView
                        android:text="@string/get_code_to"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColorTitle"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:id="@+id/textView3"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/identification_user_id_til"/>

                <RadioGroup
                        android:id="@+id/identification_radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintTop_toBottomOf="@+id/textView3">

                    <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/identification_rb_email"
                            android:text="@string/hint_email"
                            android:textAlignment="center"
                            android:layoutDirection="rtl"
                            android:buttonTint="@color/textColorTitle"
                            android:textColor="@color/textColorTitle"
                            android:layout_marginStart="16dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                    />

                    <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/identification_rb_sms"
                            android:text="@string/hint_sms"
                            android:layoutDirection="rtl"
                            android:textAlignment="center"
                            android:buttonTint="@color/textColorTitle"
                            android:textColor="@color/textColorTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                    />


                </RadioGroup>


                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/identification_mfa_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:hint="@string/hint_sms"
                        android:maxLines="1"
                        app:errorEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/identification_radioGroup">

                    <!--
                        app:boxCornerRadiusTopStart="16dp
                        app:counterEnabled="true"
                        app:counterMaxLength="11"
                        app:counterTextAppearance="@style/CounterText"
                        -->

                    <com.madanes.app.views.MobileNumberEditText
                            android:id="@+id/identification_mfa_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:textSize="18sp"
                            android:textColor="@color/textColor"
                            android:maxLines="1"
                            android:textDirection="rtl"
                            app:cleanable_icon="@drawable/ic_close_black_24dp"/>

                    <!--app:cleanable_icon = "@drawable/ic_close_black_24dp"-->

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/identification_send_btn"
            android:layout_width="170dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:backgroundTint = "@color/colorPrimary"
            style="@style/Widget.MaterialComponents.Button"
            android:text="המשך"
            android:textColor="@android:color/white"
            />

    <Button
            android:text="HELP ME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/identification_help_btn"
            android:layout_marginStart="16dp"/>

</LinearLayout>





